common/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: webapp-example.test
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: webapp-front-service
          servicePort: 9001
      # - path: /api/?(.*)
      #   backend:
      #     serviceName: webapp-api-service
      #     servicePort: 9002
